# power-system-fault-monitoring

./: .env.example  .gitignore  Dockerfile  README.md  architecture.md  checklist.md  data&model_training_plan.md  docker-compose.yml  project_description.md  project_workflow.md  pyproject.toml  requirements.txt
configs/: project.yaml
docs/api/: README.md
notebooks/: 01_protect90_eda.ipynb
reports/: cnn1d_fault_detector_large_on_realistic_0_25pct.json  cnn1d_fault_detector_large_on_realistic_0_5pct.json  cnn1d_fault_detector_large_report.json  cnn1d_fault_detector_smoke_report.json  kafka_alerts.jsonl  kafka_inference_report.json  model_comparison.csv  realistic_eval_comparison.csv  streaming_alerts.jsonl  streaming_simulation_report.json  xgboost_fault_detector_48ch_optuna_report.json  xgboost_fault_detector_48ch_optuna_trials.csv  xgboost_fault_detector_48ch_report.json  xgboost_fault_detector_48ch_tuned_recall97_on_realistic_0_25pct.json  xgboost_fault_detector_48ch_tuned_recall97_on_realistic_0_5pct.json  xgboost_fault_detector_48ch_tuned_recall97_report.json  xgboost_fault_detector_48ch_tuned_threshold_report.json
scripts/: build_feature_dataset.py  build_realistic_eval_dataset.py  check_no_leakage.py  compare_model_reports.py  compare_realistic_reports.py  create_split.py  evaluate_cnn_rare_fault.py  evaluate_saved_model.py  inspect_dataset.py  kafka_inference_consumer.py  kafka_replay_producer.py  simulate_streaming_inference.py  train_1d_cnn.py  train_baseline.py  train_xgboost.py  tune_threshold.py  tune_xgboost_optuna.py
tests/: test_split.py
(+30 files in other folders)
